<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_btn_bg_color"
    android:orientation="vertical"
    tools:context="com.shibuyaxpress.citasmedicasapp.LoginActivity">


    <ImageView
        android:layout_margin="20dp"
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:srcCompat="@drawable/logo" />




        <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_rounded"
                android:hint="@string/user_txt"
                android:paddingEnd="5dp"
                android:paddingStart="5dp" />

            <EditText
                android:layout_width="match_parent"
                android:drawableStart="@drawable/ic_lock_black_24dp"
                android:layout_height="30dp"
                android:background="@drawable/bg_rounded"
                android:hint="@string/password"
                android:paddingEnd="5dp"
                android:paddingStart="5dp" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
                android:text="Iniciar Sesión" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_user"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Crea tu cuenta aqui"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="100dp"
                android:text="@string/text_cuenta_google"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnInicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/common_google_signin_btn_text_light_normal"
                android:text="@string/txt_log_in"
                tools:layout_editor_absoluteX="103dp"
                tools:layout_editor_absoluteY="231dp" />
        </LinearLayout>

</LinearLayout>
